# IndustrialVision

./: .gitignore  1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  README.html  README.md  RegistrationICP.cpp  RegistrationRANSAC.cpp  main.cpp  run.sh
plan1/: 1.py  2.py  3.py  方案1.md  方案3.md  设想方案.md
plan2/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
plan3/: 1.cpp
plan4/: 1.cpp  CMakeLists.txt
plan5/: 1.cpp  2.cpp  CMakeLists.txt
plan6/: 2.cpp  3.cpp  4.cpp  CMakeLists.txt  ScreenCamera_2024-11-25-19-20-51.json
